# ot-harjoitustyo

./: README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  maarittelydokumentti.md  testaus.md  tuntikirjanpito.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coveragerc
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md
snakegame/: .coveragerc  .gitignore  .pylintrc  pyproject.toml  tasks.py
snakegame/src/: clock.py  database_handler.py  gamestate.py  high_score.py  image_loader.py  levelgenerator.py  levelhandler.py  levels.py  loop.py  main.py  pygame_events.py  rendering.py  score.py  snake.py  stubs.py  user_events.py
snakegame/src/displays/: default.py  game_over.py  pause.py  scores.py  start.py  victory.py
snakegame/src/objects/: food.py  grass.py  score.py  snake.py  wall.py
snakegame/src/tests/: game_state_test.py  level_handler_test.py  loop_test.py  snake_test.py  stubs.py
